@startuml
class ui.LoggedOutMenuFragment {
- MenuNavigationListener navigationListener
+ void onAttach(Context)
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
- void setupNavigationButton(View,int,int)
+ void onDetach()
}


class ui.AdminMenuFragment {
- MenuNavigationListener navigationListener
+ void onAttach(Context)
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
+ void onDetach()
}


class ui.LoggedInMenuFragment {
- MenuNavigationListener navigationListener
+ void onAttach(Context)
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
- void setupNavigationButton(View,int,int)
+ void onDetach()
}




androidx.fragment.app.Fragment <|-- ui.LoggedOutMenuFragment
androidx.fragment.app.Fragment <|-- ui.AdminMenuFragment
androidx.fragment.app.Fragment <|-- ui.LoggedInMenuFragment
@enduml
